@@ -30,7 +30,9 @@
                            data-tab-title-task view/tab_title_task;
                            data-tab-title-forwardings view/tab_title_forwardings;
                            data-tab-title-proposals view/tab_title_proposals;
-                           data-tab-title-reminders view/tab_title_reminders">
+                           data-tab-title-reminders view/tab_title_reminders;
+                           data-tab-title-dispositions view/tab_title_dispositions;
+                           data-show-disposition view/show_disposition_tab">
 
         <tbody>
           <tal:block tal:replace="structure view/render_form_template"></tal:block>
